[project]
name = "ReAnalyze"
version = "0.1.0"
description = "A tool for analyzing and visualizing benchmark data."
dependencies = [
    "matplotlib",
    "pandas",
    "seaborn"
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pandas-stubs",
    "types-seaborn"
]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",

    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-instance-attributes"
]

[tool.isort]
profile = "black"
